--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "ozembut",
-  "version": "0.0.3",
-  "description": "",
+  "version": "0.0.4",
+  "description": "oze mbut",
   "main": "index.js",
   "scripts": {
     "test": "hardhat test"
   },
+  "keywords": [
+    "oze",
+    "mbut",
+    "zembut",
+    "zem",
+    "but",
+    "teazeambut",
+    "zembutestnet",
+    "solidity"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+[https://github.com/Warriorcarl/oze.git]}"
+    "url": "https://github.com/Warriorcarl/oze.git"
   },
 
-  "author": "",
+  "author": "warriorcarl",
   "license": "MIT",
   "devDependencies": {
     "@openzeppelin/contracts": "^5.0.0",
